# dnyJni

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xygala/dnyjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FCutils.cpp  FCutils.h  JavaCallHellper.cpp  JavaCallHellper.h  native-lib.cpp
app/src/main/java/com/xygala/dnyjni/: Futils.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/xygala/dnyjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
